tdf#164337 don't update position data when waiting for a system resize

When entering and exiting LibreOffice's internal full screen mode,
updating position data causes the "exit full screen" floating
toolbar to migrate after cycle.

Change-Id: I7b283a4af5460deaa258b9df16bb5577b685a756
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185004
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit 3a58d8facfee21616a6a5faa5209be7a56770acf)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185312
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>